<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_green_3"
    tools:context=".main.focus.FocusFragment">


    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
       />

    <ImageView
        android:id="@+id/home_img"
        android:layout_below="@id/main_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_img"
        android:layout_centerHorizontal="true"
        android:background="@drawable/input_selector"
        android:ems="16"
        android:textCursorDrawable="@drawable/text_cursor"
        android:hint="@string/tip_time"
        android:inputType="number"
        android:padding="12dp"
        android:textColorHighlight="@color/app_green_4"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/remain_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        tools:text="time" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_below="@id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="38dp"
        android:background="@color/app_green_4"
        android:text="@string/start_limit"
        android:textAllCaps="false"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/btn_timed_task"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_below="@id/btn_start"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="10dp"
        android:background="@color/app_green_4"
        android:text="@string/start_timed_task"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_set_launcher"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@id/btn_timed_task"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:background="@null"
        android:text="@string/set_launcher"
        android:textAllCaps="false"
        android:textColor="@color/app_green_4"
        android:textSize="11sp"
        android:visibility="invisible"
        tools:visibility="visible" />


    <ScrollView
        android:id="@+id/tips_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/recycle_white_list"
        android:layout_below="@id/btn_timed_task"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:id="@+id/tips_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/limit_model_tips_root"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tips_huawei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/limit_model_tips_floating"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tips_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/limit_model_tips_normal"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/recycle_white_list"
        android:visibility="gone"
        android:background="@color/app_green_4" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_white_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="8dp"
        android:background="@color/app_green_5"
        android:paddingRight="8dp" />


</RelativeLayout>